# appium-tools

./: AGENTS.md  README.md  chat.py  main.py  package-lock.json  pyproject.toml  test_tools.py  tools.py
appium_tools/: __init__.py  app_management.py  device_info.py  interaction.py  navigation.py  token_counter.py
docs/: token_counter_usage.md
tools/: __init__.py  app_management.py  interaction.py  session.py
