[project]
name = "appium-tools"
version = "0.1.0"
description = "LangChain-integrated Appium automation toolkit with GPT-4 natural language control"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Raiko Funakami", email = "your-email@example.com" }
]
license = { text = "MIT" }
keywords = ["appium", "langchain", "automation", "testing", "gpt-4", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "appium-python-client>=5.2.4",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "openai>=2.8.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/aRaikoFunakami/appium-tools"
Repository = "https://github.com/aRaikoFunakami/appium-tools.git"
Issues = "https://github.com/aRaikoFunakami/appium-tools/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["appium_tools"]
